--- a/static/style/mobile.css
+++ b/static/style/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
     header {
         padding-left: 5vw;
         padding-right: 5vw;
@@ -12,6 +12,10 @@
     .controls {
         width: fit-content;
         margin: 5px;
+    }
+
+    .controls #menu {
+        display: block;
     }
 
     section .t {
